--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi==0.63.0
 httpx==0.18.1
-reasoner-pydantic==1.1.0
+reasoner-pydantic @ git+git://github.com/TranslatorSRI/reasoner-pydantic@v1.1.2
 uvicorn==0.13.3
