Added requirements lockfiles and manage.py script
- Updated Dockerfiles to use new requirements lockfiles
- Updated README to reflect management script
- Added workflow check for up-to-date requirements
- Added tests/__init__.py to fix issue with running tests from root

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,3 +36,13 @@ jobs:
         with:
           file: ./coverage.xml
           env_vars: OS,PYTHON
+
+  verify-lock:
+    name: Verify lockfiles are up to date
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+
+      - name: Verify lockfiles
+        run: python manage.py verify_locked
