--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
               id: meta
               uses: docker/metadata-action@v3
               with:
+                ref: ${{ github.event.release.target_commitish }}
                 # list of Docker images to use as base name for tags
                 images: |
                   ghcr.io/NCATSTranslator/workflow-runner
