--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,13 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v2
+              with:
+                ref: ${{ github.event.release.target_commitish }}
 
             - name: Docker meta
               id: meta
               uses: docker/metadata-action@v3
               with:
-                ref: ${{ github.event.release.target_commitish }}
                 # list of Docker images to use as base name for tags
                 images: |
                   ghcr.io/NCATSTranslator/workflow-runner
