Add gunicorn as a dependency

--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -2,14 +2,16 @@ anyio==3.5.0
 certifi==2021.10.8
 click==7.1.2
 fastapi==0.63.0
+gunicorn==21.2.0
 h11==0.12.0
 httpcore==0.13.7
 httpx==0.18.1
 idna==3.3
+packaging==23.2
 pydantic==1.9.0
 reasoner-pydantic==2.2.3
 rfc3986==1.5.0
 sniffio==1.2.0
 starlette==0.13.6
 typing_extensions==4.1.1
-uvicorn==0.13.3
+uvicorn==0.22.0
